# Cinder

./: .gitmodules  CMakeLists.txt  GNUmakefile  README.linux.md
CMakeModules/: CinderDepends.cmake  CinderInclude.cmake  CinderSrcs.cmake  FindCINDER.cmake
docs/doxygen/docsrc/guides/cinderboost/: CinderBoost.dox
include/cinder/: Buffer.h  Cinder.h  Display.h  Font.h  ImageSourcePng.h  MayaCamUI.h  Text.h  Timeline.h  TimelineItem.h  Timer.h  Tween.h  UrlImplLinux.h  Utilities.h
include/cinder/app/: App.h  AppBasic.h  AppImplLinux.h  AppImplLinuxBasic.h  AppImplLinuxRenderer.h  AppImplLinuxRendererGlx.h  AppNative.h  Renderer.h  Window.h
include/cinder/cocoa/: CinderCocoa.h
include/cinder/gl/: GlslProg.h  gl.h
samples/BasicApp/: CMakeLists.txt
samples/BasicApp/include/: basicApp.h
samples/BasicApp/resources/: hello.txt
samples/BasicApp/src/: basicApp.cpp
samples/BasicAppMultiWindow/: CMakeLists.txt
samples/BasicAppMultiWindow/src/: BasicAppMultiWindowApp.cpp
samples/BasicParticles/: CMakeLists.txt
samples/EaseGallery/: CMakeLists.txt
samples/EaseGallery/src/: EaseGalleryApp.cpp
samples/FBOBasic/: CMakeLists.txt
samples/FBOBasic/src/: FBOBasicApp.cpp
samples/ListenerBasic/: CMakeLists.txt
samples/ListenerBasic/include/: SquareListener.h
samples/StereoscopicRendering/: CMakeLists.txt
samples/SurfaceBasic/: CMakeLists.txt
samples/_timeline/BasicAppendTween/vc9/: BasicAppendTween.sln  BasicAppendTween.vcproj
samples/_timeline/CustomCallback/src/: CustomCallbackApp.cpp
samples/_timeline/CustomLerp/: CMakeLists.txt
samples/_timeline/DragTween/src/: DragTweenApp.cpp
samples/_timeline/PaletteBrowser/include/: Item.h  Swatch.h
samples/_timeline/PaletteBrowser/src/: Item.cpp  PaletteBrowserApp.cpp  Swatch.cpp
samples/_timeline/PaletteBrowser/vc10/: PaletteBrowser.sln  PaletteBrowser.vcxproj  PaletteBrowser.vcxproj.filters
samples/_timeline/VisualDictionary/include/: CenterState.h  Dictionary.h  WordNode.h
samples/_timeline/VisualDictionary/resources/: EnglishDictionary
samples/_timeline/VisualDictionary/src/: CenterState.cpp  Dictionary.cpp  VisualDictionaryApp.cpp  WordNode.cpp
samples/_timeline/VisualDictionary/vc10/: VisualDictionary.vcxproj  VisualDictionary.vcxproj.filters
samples/_timeline/VisualDictionary/xcode/VisualDictionary.xcodeproj/: project.pbxproj
samples/bezierPath/: CMakeLists.txt
samples/shaderTest/: CMakeLists.txt
src/: CMakeLists.txt
src/cinder/: Buffer.cpp  Display.cpp  Font.cpp  ImageIo.cpp  ImageSourceFileFreeImage.cpp  ImageSourcePng.cpp  Rand.cpp  Text.cpp  Timeline.cpp  TimelineItem.cpp  Timer.cpp  Tween.cpp  Url.cpp  Utilities.cpp
src/cinder/app/: App.cpp  AppBasic.cpp  AppImplCocoaTouchRendererGl.mm  AppImplLinux.cpp  AppImplLinuxBasic.cpp  AppImplLinuxRendererGlx.cpp  KeyEvent.cpp  Renderer.cpp  Window.cpp
src/cinder/cocoa/: CinderCocoa.mm
src/cinder/gl/: GlslProg.cpp  Texture.cpp  gl.cpp
vc10/: cinder.vcxproj.filters
xcode/cinder.xcodeproj/: project.pbxproj
